# talaria

./: .gitignore  Cargo.toml  README.md  flake.nix  openapi.json
crates/talaria-cli/: Cargo.toml
crates/talaria-cli/src/: main.rs
crates/talaria-core/: Cargo.toml
crates/talaria-core/src/: camera.rs  client.rs  config.rs  error.rs  images.rs  lib.rs  models.rs  supabase.rs
crates/talaria-core/tests/: models.rs  supabase.rs
crates/talaria-tui/: Cargo.toml
crates/talaria-tui/src/: app.rs  event_bus.rs  main.rs  types.rs
crates/talaria-tui/src/camera/: mod.rs  opencv_backend.rs
crates/talaria-tui/src/preview/: minifb.rs  mod.rs  windows.rs
crates/talaria-tui/src/storage/: mod.rs  worker.rs
crates/talaria-tui/src/ui/: layout.rs  mod.rs  theme.rs
crates/talaria-tui/src/util/: fs.rs  log_redirect.rs  mod.rs  sharpness.rs
crates/talaria-tui/src/workers/: account.rs  enrich.rs  listings.rs  mod.rs  upload.rs
