[workspace]
members = ["crates/talaria-core", "crates/talaria-cli", "crates/talaria-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Talaria Developers"]

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
    "gzip",
    "brotli",
    "zstd",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
toml = "0.9.10"
dirs = "6.0.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
futures = "0.3.31"
tokio-util = { version = "0.7.17", features = ["rt"] }
parking_lot = "0.12.5"
serde_repr = "0.1.20"
strum = { version = "0.27.2", features = ["derive"] }
humantime = "2.3.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
