[package]
name = "talaria-cli"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
talaria-core = { path = "../talaria-core" }
tokio = { workspace = true }
prettytable-rs = "0.10.0"
