[package]
name = "talaria-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
camera = ["dep:nokhwa", "dep:image"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }

mime_guess = "2.0.4"
base64 = "0.22.1"

image = { version = "0.25.2", default-features = false, features = ["png","jpeg"], optional = true }
nokhwa = { version = "0.10.4", default-features = false, features = ["input-native","output-threaded"], optional = true }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json","native-tls","gzip","brotli","zstd"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json","rustls","gzip","brotli","zstd"] }

