[package]
name = "talaria-tui"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5.15"
dirs = { workspace = true }
libc = "0.2.178"
opencv = "0.98.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
