[package]
name = "talaria-tui"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5.15"
dirs = { workspace = true }
libc = "0.2.179"
opencv = "0.98.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
talaria-core = { path = "../talaria-core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
uuid = { workspace = true }
