[package]
name = "talaria-tui"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5.15"
dirs = { workspace = true }
libc = "0.2.179"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
minifb = "0.25.0"
nokhwa = { version = "0.10.10", default-features = false, features = [
  "input-native",
  "output-threaded",
] }
serde = { workspace = true }
serde_json = { workspace = true }
talaria-core = { path = "../talaria-core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "native-tls",
  "gzip",
  "brotli",
  "zstd",
  "http2",
] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "rustls",
  "gzip",
  "brotli",
  "zstd",
  "http2",
] }
